Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5205

Recent commit for exception entry check break a Xeon Phi build

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.6.0
    • None
    • 3
    • 14530

      The Lustre commit c394068ee148595711c661651368b91373bcc78a break a Xeon Phi build.
      Reviewed-on: http://review.whamcloud.com/10709

      /var/lib/jenkins/workspace/lustre-master/arch/xeonphi/build_type/client/distro/el6/ib_stack/inkernel/BUILD/BUILD/lustre-2.5.60/lustre/mdc/mdc_request.c: In function 'mdc_page_locate':
      /var/lib/jenkins/workspace/lustre-master/arch/xeonphi/build_type/client/distro/el6/ib_stack/inkernel/BUILD/BUILD/lustre-2.5.60/lustre/mdc/mdc_request.c:1184:2: error: implicit declaration of function 'radix_tree_exceptional_entry' [-Werror=implicit-function-declaration]
      cc1: some warnings being treated as errors
      

            ys Yang Sheng
            dmiter Dmitry Eremin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: