LU-5205 mdc: Add config check for Xeon Phi build

Add config check for radix_tree_exception_entry()
to not broken Xeon Phi build.

Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: I2f405e392003162e779ffbf9055e410917940df7
Reviewed-on: http://review.whamcloud.com/10734
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>